# aw-watcher-window

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
aw_watcher_window/: config.py  lib.py  macos.swift  macos_applescript.py  main.py  windows.py  xlib.py  xprop.py
sd-client/: Makefile  README.md  pyproject.toml
sd-client/.github/workflows/: examples.yml
sd-client/examples/: email_report.py  load_dataframe.py  merge_buckets.py  redact_sensitive.py  suggest_categories.py  suggest_categories_gpt.py  time_spent_today.py  working_hours.py
sd-client/sd_client/: __main__.py  classes.py  cli.py  client.py  config.py  queries.py  singleinstance.py
sd-client/sd_client/persistqueue/: __init__.py  mysqlqueue.py  pdict.py  queue.py  sqlbase.py  sqlqueue.py
sd-client/tests/: test_client.py  test_failqueue.py  test_requestqueue.py
sd-core/: Makefile  README.md  pyproject.toml
sd-core/sd_cli/: __main__.py
sd-core/sd_core/: __about__.py  config.py  dirs.py  launch_start.py  log.py  models.py  schema.py  util.py
sd-core/sd_datastore/: benchmark.py  datastore.py  migration.py
sd-core/sd_datastore/storages/: abstract.py  memory.py  peewee.py  sqlite.py
sd-core/sd_query/: functions.py  query2.py
sd-core/sd_transform/: chunk_events_by_key.py  classify.py  filter_keyvals.py  filter_period_intersect.py  flood.py  heartbeats.py  merge_events_by_keys.py  simplify.py  sort_by.py  split_url_events.py  union_no_overlap.py
sd-core/tests/: test_config.py  test_datastore.py  test_event.py  test_flood.py  test_heartbeat.py  test_query2.py  test_schemas.py  test_transforms.py  utils.py
sd-qt/: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  sd-qt.spec
sd-qt/.github/workflows/: build.yml
sd-qt/resources/: sd-qt.desktop
sd-qt/scripts/: config-autostart.sh
sd-qt/sd_qt/: __main__.py  config.py  main.py  manager.py  trayicon.py
sd-qt/tests/: integration_tests.py
sd-server/: pyproject.toml
sd-server/sd_server/: __about__.py  api.py  rest.py
sd-watcher-afk/: pyproject.toml
sd-watcher-window/: Makefile  sd-watcher-window.spec
sd-watcher-window/misc/: sd-watcher-x11.service
sd-watcher-window/sd_watcher_window/: config.py
sd_watcher_window/: __main__.py  lib.py  macos.swift  macos_applescript.py  macos_jxa.py  macos_permissions.py  main.py  printAppStatus.jxa  windows.py
