[tool.poetry]
name = "sd-qt"
version = "0.1.0"
description = "Trayicon for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
include = ["sd_qt/resources.py"]  # resources.py is in .gitignore and generated before build
packages = [
    { include = "sd_qt" },
]

[tool.poetry.scripts]
aw-qt = "sd_qt:main"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
aw-core = "^0.5"

pyobjc-framework-Cocoa = { version = "*", platform = "darwin" }
click = "*"

# For some reason, importlib-metadata is being uninstalled in the bundle repo CI
# (despite needed by flask in sd-server for Python <3.10)
importlib-metadata = {version = "*", python = "<3.10"}

# provides pkg_resources, needed for pyinstaller for some reason
setuptools = "*"

[tool.poetry.group.pyqt.dependencies]
PyQt6 = "6.3.1"

[tool.poetry.dev-dependencies]
mypy = "*"
# PyQt6-stubs = { git = "https://github.com/TilmanK/PyQt6-stubs", rev = "main" }
flake8 = "*"
pyinstaller = ">=5.1"
types-click = "*"
psutil="*"

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.resources"
ignore_errors = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
